--- a/finetuning_llama2_7b_1gpu.ipynb
+++ b/finetuning_llama2_7b_1gpu.ipynb
@@ -2086,6 +2086,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "adapted from https://colab.research.google.com/drive/1RojNBnLIsmm98sSNYAPC6d5WVVFX4tE9?usp=sharing"
+      ],
+      "metadata": {
+        "id": "epqbwj-dMWIj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Ludwig + DeepLearning.ai: Efficient Fine-Tuning for Llama2-7b on a Single GPU** 🙌\n",
         "\n",
         "Let's explore how to fine-tune an LLM on a single commodity GPU with [Ludwig](https://ludwig.ai/latest/), an open-source package that empowers you to effortlessly build and train machine learning models like LLMs, neural networks and tree based models through declarative config files.\n",
