updating instructions to load model after saving it

--- a/finetuning_llama2_7b_1gpu.ipynb
+++ b/finetuning_llama2_7b_1gpu.ipynb
@@ -4544,14 +4544,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# without quantization and LoRa\n",
+        "# Load saved model\n",
         "\n",
-        "# from peft import PeftModel, PeftConfig\n",
-        "# from transformers import AutoModelForCausalLM\n",
+        "from peft import PeftModel, PeftConfig\n",
+        "from transformers import AutoModelForCausalLM\n",
         "\n",
-        "# config = PeftConfig.from_pretrained(\"arnavgrg/codealpaca_v3\")\n",
-        "# model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-hf\")\n",
-        "# model = PeftModel.from_pretrained(model, \"arnavgrg/codealpaca_v3\")"
+        "config = PeftConfig.from_pretrained(\"results/api_experiment_run/model/model_weights/\")\n",
+        "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-hf\")\n",
+        "model = PeftModel.from_pretrained(model, \"results/api_experiment_run/model/model_weights/\")"
       ],
       "metadata": {
         "id": "lgGfBBBjPT_7"
